# WARNING: head commit changed in the meantime
25: Build a Java 9 Multi-Release JAR

Task-Url: https://github.com/unitsofmeasurement/indriya/issues/25